fix the table links paddings and cells that sit too close to eachother on desktop and mobile

--- a/slice/src/components/sSen/sSen.scss
+++ b/slice/src/components/sSen/sSen.scss
@@ -313,6 +313,7 @@
     overflow: hidden;
     @include margin(0 0 30px, 0 0 50px);
 
+    h4,
     &-count {
       font-family: $RobotoCondensed-Light;
       font-size: 18px;
